--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,13 @@
 name: 'Bark Action'
 description: 'An action for bark'
-author: Ji Yuanhao <jiyuanhao1997@gmail.com>
+author: monlor <me@monlor.com>
 branding:
   icon: 'message-circle'
   color: 'red'
 inputs:
+  host: 
+    description: bark service host
+    required: false
   key:
     description: Secret key
     required: true
@@ -29,13 +32,20 @@ inputs:
   copy:
     description: Content copied to clipboard
     required: false
+  icon:
+    description: Message icon (ver >= ios15)
+    required: false
+  group:
+    description: Message group
+    required: false
 runs:
   using: "composite"
   steps:
     - name: Run script
       shell: bash
       run: $GITHUB_ACTION_PATH/script.sh
-      env:
+      env: 
+        INPUT_HOST: ${{ inputs.host }}
         INPUT_KEY: ${{ inputs.key }}
         INPUT_TITLE: ${{ inputs.title }}
         INPUT_BODY: ${{ inputs.body }}
@@ -44,3 +54,5 @@ runs:
         INPUT_URL: ${{ inputs.url }}
         INPUT_AUTOMATICALLYCOPY: ${{ inputs.automaticallyCopy }}
         INPUT_COPY: ${{ inputs.copy }}
+        INPUT_ICON: ${{ inputs.icon }}
+        INPUT_GROUP: ${{ inputs.group }}
